# DBGAcc

./: README.md
applications/: README  sim.cfg  sim.info  sim.stats.sqlite3
applications/Megahit/: .gitignore  CMakeLists.txt  README.md  install.sh  reads.lib  super_large_reads.lib
applications/Megahit/src/: assemble_bench.cpp  build_sdbg_bench.cpp  load_reads_bench.cpp  load_seq_bench.cpp  megahit
applications/Megahit/src/assembly/: unitig_graph.cpp
applications/Megahit/src/sequence/io/: sequence_lib.h
applications/Megahit/src/sorting/: base_engine.cpp  base_engine.h  kmer_counter.cpp  kmer_counter.h  seq_to_sdbg.cpp
applications/Megahit/src/utils/: utils.h
applications/Pasha/: Makefile
applications/Pasha/Common/: AlshaDefs.h  AlshaFastaFileParser.cpp  AlshaFastaFileParser.h  AlshaFastqFileParser.cpp  AlshaFastqFileParser.h  AlshaFileParser.cpp  AlshaFileParser.h  AlshaHistogram.cpp  AlshaHistogram.h  AlshaKmer.cpp  AlshaKmer.h  AlshaParams.cpp  AlshaParams.h  AlshaTypes.h  AlshaUtils.cpp  AlshaUtils.h  Makefile  lib
applications/Pasha/PreGraph/: Alsha.cpp  Alsha.h  AlshaComms.cpp  AlshaComms.h  AlshaHash.cpp  AlshaHash.h  AlshaMessage.cpp  AlshaMessage.h  AlshaThread.cpp  AlshaThread.h  KmerGen.cpp  Makefile  PreGraph.cpp  pasha-step1  pasha-step1.cpp  sim.cfg  sim.info  sim.stats.sqlite3
applications/Pasha/google/sparsehash/: sparseconfig.h
applications/Pasha/zlib/: example  minigzip
data/: README
megahit/: CMakeLists.txt  test_sub_step.py
megahit/src/assembly/: unitig_graph.cpp
megahit/src/kmlib/: kmbitvector.h
megahit/src/sdbg/: sdbg.h  sdbg_raw_content.cpp
megahit/src/sequence/: sequence_package.h
megahit/src/sorting/: base_engine.cpp  base_engine.h  kmer_counter.cpp  kmer_counter.h
sniper/: .gitignore
sniper/BIO_TEST/: hardcopy.0  test.sh
sniper/common/core/: core.cc
sniper/common/network/: network_model_emesh_hop_by_hop.cc  network_model_emesh_hop_by_hop.h
sniper/common/performance_model/: performance_model.cc  performance_model.h
sniper/common/performance_model/performance_models/: micro_op_performance_model.cc
sniper/common/performance_model/performance_models/interval_performance_model/: interval_timer.cc  interval_timer.h
sniper/common/system/: magic_client.cc  magic_server.cc  simulator.cc  simulator.h
sniper/config/: gainestown.cfg  hmc20_four_cube_daisy.cfg  hmc20_single_cube.cfg  hmc20_three_cube.cfg  hmc20_two_cube.cfg  small-pim-slow.cfg  small-pim.cfg
sniper/frontend/pin-frontend/sift/: fixed_types.h  sift.h  sift_assert.h  sift_format.h  sift_reader.cc  sift_reader.h  sift_utils.cc  sift_utils.h  sift_writer.cc  sift_writer.h  siftdump.cc  zfstream.cc  zfstream.h
sniper/include/: sim_api.h
sniper/pim_prof/dnn_test/: Makefile  alexnet
sniper/pim_prof/dnn_test/src/: alexnet.cpp  example_utils.hpp  test.cpp
sniper/pim_prof/gapbs/: Makefile  bfs_pim
sniper/pim_prof/gapbs/src/: bfs.cc  bfs_cpu.cc  bfs_pim.cc  pr_pim.cc
sniper/pim_prof/shared/: Makefile.shared
sniper/sift/recorder/sift/: fixed_types.h  sift.h  sift_assert.h  sift_format.h  sift_reader.cc  sift_reader.h  sift_utils.cc  sift_utils.h  sift_writer.cc  sift_writer.h  siftdump.cc  zfstream.cc  zfstream.h
sniper/test/fft/: Makefile  fft  power.py  power.txt  power.xml
sniper/test/helloworld/: Makefile  helloworld  helloworld.cpp
sniper/test/mpi/: Makefile  pi
sniper/tools/: gen_simout.py
